# chirashi

./: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  r.sh
backend/: dev.Dockerfile  main.py  prod.Dockerfile  pyproject.toml  requirements.txt  routes.py
backend/db/: database.py
backend/helpers/: orc.py
frontend/: dev.Dockerfile  package-lock.json  package.json  prod.Dockerfile  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: firebase_auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/Explore/: +page.svelte
frontend/src/routes/Home/: +page.svelte
frontend/src/routes/UserProfile/: +page.svelte
